Добавлен функционал "Как был сформирован запрос", "Показать промпт"